FIxing http request

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<link rel="icon" type="image/png" sizes="32x32" href="https://alexspadlo.github.io/src/img/fav.ico" />
 		<script src="https://kit.fontawesome.com/f558a597bb.js"></script>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -12,5 +13,5 @@
     <body>
         <div id="root">
         </div>
-    <script type="text/javascript" src="scripts/bundle-index.js?829d6b343822b95e6fdd"></script></body>
+    <script type="text/javascript" src="scripts/bundle-index.js?23fb711631f6f9f7703c"></script></body>
 </html>
